--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "patch": "npm version bump",
-    "watch": "webpack-dev-server --config webpack.config.js",
+    "watch": "webpack-dev-server --config build/webpack.config.js",
     "build": "rm -rf ./dist && npm run build:client",
-    "build:client": "NODE_ENV=production webpack --config webpack.config.js -p --progress",
+    "build:client": "NODE_ENV=production webpack --config build/webpack.config.js -p --progress",
     "webpack-defaults": "webpack-defaults"
   },
   "repository": {
@@ -26,26 +26,28 @@
   },
   "homepage": "https://github.com/Mathieu-R/vuejs-starter#readme",
   "dependencies": {
-    "babel-preset-minify": "^0.2.0",
-    "bundle-buddy-webpack-plugin": "^0.3.0",
-    "vue": "^2.4.2"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.6.0",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
+    "bundle-buddy-webpack-plugin": "^0.3.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.2",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.4",
+    "webpack": "^3.8.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.9.2"
   }
 }
